Updated openapi spec
