# src/httpfunctions/models/Feature.ts
@@ -2,7 +2,9 @@
 /* istanbul ignore file */
 /* tslint:disable */
 /* eslint-disable */
-export type Body_post_zip_file_post_zip_file__post = {
-    file?: (Blob | null);
+export type Feature = {
+    id: string;
+    name: string;
+    description: string;
 };
 
